syntax = "proto3";

package clientwallet;

service ClientWallet {
  rpc CreateTransaction(CreateTransactionInput) returns (Transaction) {}
  rpc GetClientBalance(GetBalanceInput) returns (BalanceReturn) {}
}

enum TransactionTypeEnum {
  CREDIT_CARD_PAYMENT = 0;
  DEBIT_CARD_PAYMENT = 1;
  WITHDRAWAL = 2;
}

enum ServiceTypeEnum {
  CARD_PAYMENT = 0;
  INTERNAL = 1;
}

message Transaction {
  string id = 1;
  string client_id = 2;
  double amount = 3;
  TransactionTypeEnum type = 4;
  string transaction_service_id = 5;
  ServiceTypeEnum service = 6;
  string transaction_date = 7;
  string created_at = 8;
}

message CreateTransactionInput {
  string client_id = 1;
  double amount = 2;
  TransactionTypeEnum type = 3;
  ServiceTypeEnum service = 4;
  string transaction_service_id = 5;
  string transaction_date = 6;
}

message GetBalanceInput {
  string client_id = 1;
}

message BalanceReturn {
  double balance = 1;
}